--- a/basketball.html
+++ b/basketball.html
@@ -12,7 +12,7 @@
             <ul>
                 <li class="inline"><a href="index.html">Home</a></li>
                 <li class="inline"><a href="atm.html">ATM</a></li>
-                <li class="inline"><a href="myfuture.html">Basketball</a></li>
+                <li class="inline"><a href="myfuture.html">MyFuture</a></li>
               
             </ul>
         </header>
