--- a/myfuture.html
+++ b/myfuture.html
@@ -16,6 +16,13 @@
               
             </ul>
         </header>
+        <h1>High School</h1>
+        <ul>
+            <li>Lakewood</li>
+            <li>Poly</li>
+            <li>Millikan</li>
+        </ul>
+        
 
     </body>
     </html>
