--- a/myfuture.html
+++ b/myfuture.html
@@ -22,6 +22,9 @@
             <li>Poly</li>
             <li>Millikan</li>
         </ul>
+        <div>
+            <img src="images/poly.jpg" width="300">
+        </div>
         <h1>College</h1>
         <p>I'm going to every college that will gie me a scholarshipp to play</p>
         
